Tritao: Select component with mandatory value validation implemented, and many others improvements.